# Transformer-Variants

./: .gitignore  LICENSE  README.md  model.py  pyproject.toml  requirements.txt  test.py
transformer_variants/: __init__.py  model.py
