[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "transformers-from-scratch"
version = "0.1.2"
description = "Encoder, decoder, and encoder-decoder Transformer architectures in PyTorch"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = ["torch>=2.0"]

[project.urls]
Repository = "https://github.com/etfrer-yi/Transformer-Variants"
